--- a/HelloWorldApp/templates/index.html
+++ b/HelloWorldApp/templates/index.html
@@ -4,6 +4,8 @@
 	<title>Hello World</title>
 </head>
 <body>
-<h1>HELLO WORLD</h1>
+<h1 align="center">HELLO WORLD</h1>
+<br>
+<h2 align="center">Una página de prueba</h2>
 </body>
 </html>
