--- a/HelloWorldApp/templates/index.html
+++ b/HelloWorldApp/templates/index.html
@@ -7,6 +7,6 @@
 <h1 align="center">HELLO WORLD</h1>
 <br>
 <h2 align="center">Una página de prueba</h2>
-<h2>si ya hizo cambio que muestre este texto</h2>
+<h2 align="center">si ya hizo cambio que muestre este texto</h2>
 </body>
 </html>
